@@ -27,6 +27,7 @@ Emulation fixes:
  - GBA Memory: Fix STM to VRAM (fixes mgba.io/i/1430)
  - GB Audio: Only reset channel 3 sample in DMG mode
  - GB Audio: Sample inactive channels (fixes mgba.io/i/1455, mgba.io/i/1456)
+ - GB Video: Increment BCPS/OCPS even in mode 3 (fixes mgba.io/i/1462)
 Other fixes:
  - Qt: Fix some Qt display driver race conditions
  - Core: Improved lockstep driver reliability (Le Hoang Quyen)
